syntax = "proto3";

package communicator_objects;

enum CommandProto {
        STEP = 0;
        RESET = 1;
        QUIT = 2;
    }

